<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BOSS Cashier</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="start">Start</string>
    <string name="sign_in">Sign In</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="username_required">Username Required!</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="full_name" tools:ignore="ExtraTranslation">Fullname</string>
    <string name="full_name_required" translatable="false" tools:ignore="ExtraTranslation">Fullname Required!</string>
    <string name="email_required">Email is Required</string>
    <string name="name_required">Name is Required</string>
    <string name="password_required">Password is Required</string>
    <string name="invalid_email">Email is not valid</string>
    <string name="password_length">Minimum password is 6 characters</string>
    <string name="login_error">Login failed.</string>
    <string name="login_success">Login successfully</string>
    <string name="register_error">Register failed.</string>
    <string name="er_empty_username">Fill in your username</string>
    <string name="er_taken_username">Username already in use, try with another username</string>
    <string name="er_empty_email">Fill in your email!</string>
    <string name="er_wrong_email_format">Wrong email format!</string>
    <string name="er_taken_email">Email already in use, try with another email</string>
    <string name="er_empty_password">Fill in your password!</string>
    <string name="er_password_to_short">Minimum 8 characters for password</string>
    <string name="er_wrong_password">Wrong password!</string>
    <string name="sign_out">sign out</string>
    <string name="arybync">Arybync</string>
    <string name="add_product">Add Product</string>
    <string name="choose_image">Choose Image</string>
    <string name="img_upload_error">Upload Failed</string>
    <string name="edit_product">Edit Product</string>
    <string name="product">Product</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image">Image</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="username_cashier">Username Cashier</string>
    <string name="example_id">00001</string>
    <string name="example_username">Arybync</string>
    <string name="example_date">20/20/2023 04:53:13</string>
    <string name="total_price">Total Price</string>
    <string name="total_profit">Total Profit</string>
    <string name="proof">Proof</string>
    <string name="example_price">Rp.10.000</string>
    <string name="profit_rp">Profit : Rp.</string>
    <string name="original_price_rp">Original Price : Rp.</string>
    <string name="product_name">Product Name</string>
    <string name="brand">Brand</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="save">Save</string>
    <string name="edit_service">Edit Service</string>
    <string name="service_name">Service Name</string>
    <string name="service_materials_price">Service Materials Price</string>
    <string name="final_price">Final Price</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="type">Type</string>
    <string name="example_month_day">April/20</string>
    <string name="onprogress">onProgress</string>
    <string name="accounting_id_0001">Accounting ID : #0001</string>
    <string name="starter_balance">Starter Balance</string>
    <string name="initial_digital">Initial Digital</string>
    <string name="initial_cash">Initial Cash</string>
    <string name="initial_stock">Initial Stock</string>
    <string name="example_stock">120 Product</string>
    <string name="initial_stock_worth">Initial Stock Worth</string>
    <string name="financial_data">Financial Data</string>
    <string name="capital_investment">Capital Investment</string>
    <string name="transaction_income">Transaction Income</string>
    <string name="restock_purchases">Restock Purchases</string>
    <string name="return_product">Return Product</string>
    <string name="balance_report">Balance Report</string>
    <string name="balance_in">Balance In</string>
    <string name="balance_out">Balance Out</string>
    <string name="profit_earned">Profit Earned</string>
    <string name="final_balance">Final Balance</string>
    <string name="final_digital">Final Digital</string>
    <string name="final_cash">Final Cash</string>
    <string name="final_stock">Final Stock</string>
    <string name="final_stock_worth">Final Stock Worth</string>
    <string name="s_i_g_n_i_n">S i g n i n</string>
    <string name="hello">Hello, </string>
    <string name="balance">Balance</string>
    <string name="enter_balance">Enter Balance</string>
    <string name="enter_withdraw_value">Enter Withdraw Value</string>
    <string name="digital_balance">Digital Balance</string>
    <string name="today_income">Today Income</string>
    <string name="stock">Stock</string>
    <string name="stock_worth">Stock Worth</string>
    <string name="services">Service</string>
    <string name="transaction">Transaction</string>
    <string name="report">Report</string>
    <string name="settings">Settings</string>
    <string name="today_report">Today Report</string>
    <string name="profit">Profit</string>
    <string name="loss">Loss</string>
    <string name="stock_in">Stock In</string>
    <string name="stock_out">Stock out</string>
    <string name="total_payment">TOTAL PAYMENT</string>
    <string name="money_received">Money Received</string>
    <string name="change">Change</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="fullname">Fullname</string>
    <string name="f_i_n_i_s_h">F i n i s h</string>
    <string name="users">Users</string>
    <string name="restock_product">Restock Product</string>
    <string name="restock_price_explainer">This profit is taken from the price value of the existing stock added to the price value of the new stock. As well as the original price taken from the total value of the old and new stock which is then divided by the new stock (new stock has been added to the last remaining stock)</string>
    <string name="new_stock">New Stock</string>
    <string name="total_stock_purchases">Total Stock Purchases</string>
    <string name="real_price">Real Price</string>
    <string name="supplier">Supplier</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="language">Language</string>
    <string name="printer_connection">Printer Connection</string>
    <string name="about">About</string>
    <string name="app_version">App Version</string>
    <string name="copyrights">Copyrights</string>
    <string name="contact_us">Contact Us</string>
    <string name="made_by_ary_bayu_nurwicaksono">Made by Ary Bayu Nurwicaksono</string>
    <string name="users_id">Users ID</string>
    <string name="total_transaction">Total Transaction</string>
    <string name="total_balance">Total Balance</string>
    <string name="total_item_sold">Total Item Sold</string>
    <string name="total_purchases">Total Purchases</string>
    <string name="add_service">Add Service</string>
    <string name="update">Update</string>
    <string name="investment">Investment</string>
    <string name="restock">Restock</string>
    <string name="return_title">Return</string>
    <string name="other_needs">Other Needs</string>
    <string name="product_catalog">Product Catalog</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="all">All</string>
    <string name="newest">Newest</string>
    <string name="oldest">Oldest</string>
    <string name="expensive">Expensive</string>
    <string name="cheapest">Cheapest</string>
    <string name="by_brand">By Brand</string>
    <string name="by_size">By Size</string>
    <string name="product_type">Product Type</string>
    <string name="stock_stored">Stock Stored</string>
    <string name="product_report">Product Report</string>
    <string name="sold">Sold</string>
    <string name="returned">Returned</string>
    <string name="product_out">Product Out</string>
    <string name="product_in">Product In</string>
    <string name="return_menu">Return Menu</string>
    <string name="enter_id">Enter ID</string>
    <string name="service_catalog">Service Catalog</string>
    <string name="service_type">Service Type</string>
    <string name="enter_service_name">Enter Service Name</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="digital_payment_proof">Digital Payment Proof</string>
    <string name="print">Print</string>
    <string name="monthly_financial_accounting">Monthly Financial Accounting</string>
    <string name="generate">Generate</string>
    <string name="by_day">By Day</string>
    <string name="transaction_report">Transaction Report</string>
    <string name="income">Income</string>
    <string name="stock_sold">Stock Sold</string>
    <string name="by_month">By Month</string>
    <string name="transaction_by_user">Transaction By User</string>
    <string name="accounting_id_title">Accounting ID : </string>
    <string name="product_value"> Product</string>
    <string name="stock_title">Stock: </string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="empty_stock">Stock is empty</string>
    <string name="empty_qty">Qty Cannot Empty!</string>
    <string name="information_title">Information</string>
    <string name="and"> and </string>
    <string name="worth"> worth.</string>
    <string name="stock_available">Stock available : </string>
    <string name="close">Close</string>
    <string name="please_select_edit_option">Please select edit option!</string>
    <string name="detail">Detail</string>
    <string name="empty_item">Item Empty</string>
    <string name="slide_1">Manage your product for the better income</string>
    <string name="slide_2">Make a transaction with customer easily</string>
    <string name="slide_3">Manage your balance and profit easily</string>
    <string name="fill_real_price">Fill Real Price</string>
    <string name="fill_price">Fill Price</string>
    <string name="fill_stock">Fill Stock</string>
    <string name="fill_total_purchases">Fill Total Purchases</string>
    <string name="fill_product_name">Fill Product Name</string>
    <string name="fill_product_brand">Fill Product Brand</string>
    <string name="fill_product_supplier">Fill Product Brand</string>
    <string name="fill_product_size">Fill Product Size</string>
    <string name="some_data_is_empty">Some data is empty!</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="digital">Digital</string>
    <string name="data_is_correct">Data is Correct</string>
    <string name="insert_data">Click Save to insert data</string>
    <string name="empty_image">Please Insert Product Image</string>
    <string name="update_data">Click Save to Update data</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="product_updated">Your Product has been updated</string>
    <string name="name_is_incorrect">Name is Incorrect</string>
    <string name="name_validation">PLEASE INSERT PRODUCT NAME CORRECTLY</string>
    <string name="delete_tutorial">You can delete an item by right swiped it</string>
    <string name="got_it">Got It</string>
    <string name="delete">Delete </string>
</resources>