<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_layout"
    android:orientation="vertical"
    tools:context=".ui.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:theme="@style/Theme.BlessingOfShoes3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_green"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/Theme.BlessingOfShoes3"
            app:contentScrim="@color/light_green_600"
            app:expandedTitleTextAppearance="@style/Theme.BlessingOfShoes3"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:collapsedTitleTextColor="@color/white"
            app:expandedTitleTextColor="@color/white"
            app:title="@string/example_username">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:scaleType="centerCrop" />


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_profile_form"
        android:clipToPadding="false"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:scrollbars="none"
        android:scrollingCache="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/img_back_main"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_arrow_back_primary_24dp" />

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:backgroundTint="@color/transparent"
                    android:text="@string/edit_profile"
                    android:textAllCaps="false"
                    android:textColor="@color/light_green"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/layout_photo"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/choose_image"
                    android:textStyle="bold" />

                <ImageButton
                    android:id="@+id/btn_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_green"
                    android:src="@drawable/ic_baseline_camera_alt_24" />

                <ImageButton
                    android:id="@+id/btn_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/light_green"
                    android:src="@drawable/ic_baseline_photo_library_24" />
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <com.example.blessingofshoes3.customView.InputTextFullname
                        android:id="@+id/edt_full_name"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:enabled="false"
                        android:background="@android:color/transparent"
                        android:hint="@string/fullname"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <com.example.blessingofshoes3.customView.InputTextUsername
                        android:id="@+id/edt_username"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:enabled="false"
                        android:background="@android:color/transparent"
                        android:hint="@string/username"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <com.example.blessingofshoes3.customView.InputTextEmail
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/email"
                        android:enabled="false"
                        android:minHeight="40dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <com.example.blessingofshoes3.customView.InputTextPassword
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@android:color/transparent"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:minHeight="40dp"
                        android:enabled="false"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:background="@drawable/ed_rounded_logout"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:text="@string/sign_out"
                android:textAllCaps="false"
                android:textColor="@color/light_green"
                android:textSize="14sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="1dp"
                app:cardElevation="3dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.balysv.materialripple.MaterialRippleLayout
                        android:id="@+id/btn_finish_edit"
                        style="@style/RippleStyleWhite"
                        android:visibility="gone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@color/light_green">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/f_i_n_i_s_h"
                            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                            android:textColor="@android:color/white" />

                    </com.balysv.materialripple.MaterialRippleLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>