<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.transaction.WashingServicesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient_green"
            android:id="@+id/view_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:paddingTop="8dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/service_catalog"
                android:textSize="34dp"
                android:layout_marginStart="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/layoutAtas"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:background="@color/light_green"
            app:layout_constraintTop_toBottomOf="@+id/view_title"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent">

            <EditText
                android:id="@+id/edt_read_name_product"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:background="@drawable/bg_search"
                android:ems="10"
                android:hint="@string/enter_service_name"
                android:paddingLeft="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/send_button_chat_log"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/btn_search"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:foregroundGravity="center"
                android:background="@null"
                android:layout_centerHorizontal="true"
                android:padding="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/light_green"
                android:src="@drawable/ic_baseline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </LinearLayout>
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:id="@+id/filter"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layoutAtas">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_all"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/rounded_primary"
                    android:text="@string/all"
                    android:layout_marginStart="5dp"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_newest"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="@string/newest"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_all"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_oldest"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="@string/oldest"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_all"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_expensive"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="@string/expensive"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_all"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_cheap"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="@string/cheapest"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_all"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_time"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="@string/by_day"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_all"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btn_a_to_z"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="A - Z"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_all"
                    app:layout_constraintTop_toTopOf="parent" />
                <Button
                    android:id="@+id/btn_z_to_a"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/round_transparent_button"
                    android:text="Z - A"
                    android:textAllCaps="false"
                    android:backgroundTint="@color/transparent"
                    android:textColor="@color/light_green"
                    android:textSize="11dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/btn_month"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_services"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:listitem="@layout/item_services_cashier" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</FrameLayout>